--- a/GenericsExample/GenericsExample.csproj
+++ b/GenericsExample/GenericsExample.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayOfThings.cs" />
+    <Compile Include="ListOfThings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
